--- a/app/heroes.component.html
+++ b/app/heroes.component.html
@@ -1,6 +1,6 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
-    <li *ngFor="let hero of heroes" (click)="onSelect(hero)"
+    <li *ngFor="let hero of heroes" [@flyInOut]="'in'" (click)="onSelect(hero)"
         [class.selected]="hero === selectedHero">
         <span class="badge">{{hero.id}}</span>
         <span>{{hero.name}}</span>
